<resources>
    <string name="app_name">Parmesan</string>
    <string name="title_meal_of_the_day">Latest</string>
    <string name="title_meal_categories">Categories</string>
    <string name="title_activity_home">Home</string>
    <string name="title_main_ingredient">Random</string>
    <string name="title_meal_area">Location</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_latest_meals">Discover</string>
    <string name="title_meal_thumbnail">Meal Thumbnail</string>
    <string name="title_meal_name">Meal Name</string>
    <string name="title_meal_category">Meals By Location</string>

    <string name="title_ingredient">Ingredients</string>
    <string name="pseudo_ingredient">Pseudo Ingredient</string>
    <string name="pseudo_measure">Pseudo Measure</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_source">Source: </string>

</resources>
